--- a/style.css
+++ b/style.css
@@ -1,15 +1,34 @@
-#banner{
+#banner {
   width: 100%;
 }
-.titulo-principal{
- padding-left: 20px; 
+.principal{
+  background-color: #CCCCCC;
+  padding: 30px;
 }
-.texto-centralizado{
-  text-align: center;
+
+.titulo-principal {
+  padding-left: 20px;
 }
 p {
   text-align: center;
 }
-#missao{
-font-size: 28px
+
+#missao {
+  font-size: 28px;
+
+}
+
+.texto-centralizado {
+  text-align: center;
+}
+
+ul{
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+  margin-right: 15%;
+}
+
+.imagem-beneficio {
+  width: 50%;
 }
