--- a/produtos.css
+++ b/produtos.css
@@ -37,6 +37,22 @@ nav a:hover{
   margin: 0 auto;
   padding: 50px;
 }
+
+.produtos h2{
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.produto-descricao{
+  font-size: 18px;
+}
+
+.produto-preco{
+  font-size:24px;
+  font-weight:bold;
+  margin: 40px 0
+}
+
 .produtos li{
   display: inline-block;
   border: 1px solid #000000;
@@ -47,4 +63,15 @@ nav a:hover{
   margin: 0 1.5%;
   box-sizing: border-box;
   padding: 30px 20px;
+}
+
+footer{
+  background: url("bg.jpg");
+  text-align:center;
+  padding: 40px 0;
+}
+.copyrights{
+  color: #FFFFFF;
+  font-size: 13px;
+  margin-top: 20px;
 }
