--- a/produtos.css
+++ b/produtos.css
@@ -65,6 +65,17 @@ nav a:hover{
   padding: 30px 20px;
 }
 
+.produtos li:hover{
+  border-color: #C78C19;
+}
+
+.produtos li:active{
+  border-color:#088c19;
+}
+.produtos li:hover h2{
+  font-size: 34px;
+}
+
 footer{
   background: url("bg.jpg");
   text-align:center;
