--- a/produtos.css
+++ b/produtos.css
@@ -1,64 +1,59 @@
-header {
-  background: #BBBBBB;
+header{
+  background-color: #BBBBBB;
   padding: 20px 0;
 }
-
 .caixa{
   width: 940px;
   position: relative;
   margin: 0 auto;
 }
-
 nav {
   position: absolute;
-  top: 110px;
+  top: 110;
   right: 0;
 }
-
-nav li{
+nav li {
   display: inline;
   margin-left: 15px;
 }
 
-nav a{
+
+nav a {
   color: #000000;
   text-decoration: none;
+  text-transform: uppercase;
   font-weight: bold;
   font-size: 22px;
-  text-transform: uppercase;
 }
 
 nav a:hover{
-  color: #C78C19;
+  color: #c78c19;
   text-decoration: underline;
 }
+
 .produtos{
   width: 940px;
   margin: 0 auto;
   padding: 50px;
 }
-
 .produtos h2{
   font-size: 30px;
   font-weight: bold;
 }
-
 .produto-descricao{
   font-size: 18px;
 }
-
 .produto-preco{
-  font-size:24px;
-  font-weight:bold;
-  margin: 40px 0
+  font-size: 24px;
+  font-weight: bold;
+  margin: 48px 0;
 }
-
 .produtos li{
   display: inline-block;
   border: 1px solid #000000;
   border-radius: 10px;
   text-align: center;
-  width:30%;
+  width: 30%;
   vertical-align: top;
   margin: 0 1.5%;
   box-sizing: border-box;
@@ -66,23 +61,36 @@ nav a:hover{
 }
 
 .produtos li:hover{
-  border-color: #C78C19;
+  border-color: #c78c19;
 }
 
-.produtos li:active{
-  border-color:#088c19;
-}
 .produtos li:hover h2{
   font-size: 34px;
 }
 
+.produtos li:active{
+  border-color: #088c19
+}
+
 footer{
   background: url("bg.jpg");
-  text-align:center;
-  padding: 40px 0;
+  text-align: center;
+  padding: 48px 0;
 }
-.copyrights{
+.copyright {
   color: #FFFFFF;
   font-size: 13px;
   margin-top: 20px;
+}
+
+main{
+  width: 940px;
+  margin: 0 auto;
+}
+
+.input-padrao{
+  display: block;
+  margin: 0 0 20px;
+  padding: 10px 25px;
+  width: 50%;
 }
