--- a/produtos.css
+++ b/produtos.css
@@ -14,7 +14,7 @@ nav {
 }
 nav li {
   display: inline;
-  margin-left: 15px;
+  margin-left: 15px; 
 }
 
 
@@ -95,19 +95,15 @@ main{
   width: 50%;
 }
 
-.checkbox{
+.checkbox {
   margin: 20px 0;
 }
 
-label{
-  display: block;
-}
-
 .enviar{
-  width:40%;
-  padding:15px 0;
-  background:orange;
-  color:white;
+  width: 40%;
+  padding: 15px 0;
+  background: orange;
+  color: #ffffff;
   font-weight: bold;
   font-size: 18px;
   border: none;
@@ -118,5 +114,20 @@ label{
 
 .enviar:hover{
   background: darkorange;
-  transform: scale(1.2);
+  transform: scale(1.5);
+}
+
+table{
+  margin: 20px 0 40px 0;
+}
+
+thead{
+  background: #555555;
+  color: white;
+  font-weight: bold;
+}
+
+th, td {
+  border: 1px solid #555555;
+  padding: 8px 15px;
 }
