--- a/produtos.css
+++ b/produtos.css
@@ -131,3 +131,52 @@ th, td {
   border: 1px solid #555555;
   padding: 8px 15px;
 }
+#banner{
+width: 100%;
+}
+
+.principal{
+background-color: #CCCCCC;
+padding: 30px;
+}
+
+.titulo-principal{
+padding-left: 20px;
+  text-align: center;
+}
+
+.texto-centralizado{
+text-align: center;
+}
+
+p{
+text-align: center;
+}
+
+em strong{
+color: red;
+}
+
+#missao{
+font-size: 28px;
+}
+
+.beneficios{
+padding: 20px;
+background-color: #FFFFFF;
+}
+
+ul{
+display: inline-block;
+vertical-align: top;
+width: 20%;
+margin-right: 15%;
+}
+
+.item{
+font-style: italic;
+}
+
+.imagem-beneficios{
+width: 50%;
+}
