--- a/produtos.css
+++ b/produtos.css
@@ -131,35 +131,28 @@ th, td {
   border: 1px solid #555555;
   padding: 8px 15px;
 }
-#banner{
+.banner{
 width: 100%;
 }
 
 .principal{
-background-color: #CCCCCC;
-padding: 30px;
+background-color: #fefefe;
+padding: 1em 0;
+margin: 0 auto;
 }
 
 .titulo-principal{
 padding-left: 20px;
   text-align: center;
+  font-size: 2em;
+  margin: 0 0 1em;
 }
 
-.texto-centralizado{
-text-align: center;
+
+.principal p{
+margin: 0 0 1em;
 }
 
-p{
-text-align: center;
-}
-
-em strong{
-color: red;
-}
-
-#missao{
-font-size: 28px;
-}
 
 .beneficios{
 padding: 20px;
@@ -179,4 +172,10 @@ font-style: italic;
 
 .imagem-beneficios{
 width: 50%;
+}
+
+.utensilios{
+  width: 120px;
+  float: left;
+  Margin: 0 20px 20px 0;
 }
