--- a/produtos.css
+++ b/produtos.css
@@ -84,8 +84,8 @@ footer{
 }
 
 main{
-  width: 940px;
-  margin: 0 auto;
+  background: linear-gradient(#FEFEFE, #888888);
+  
 }
 
 .input-padrao{
@@ -135,10 +135,10 @@ th, td {
 width: 100%;
 }
 
-.principal{
-background-color: #fefefe;
+.principal{}
 padding: 1em 0;
 margin: 0 auto;
+width: 940px;
 }
 
 .titulo-principal{
@@ -156,7 +156,8 @@ margin: 0 0 1em;
 
 .beneficios{
 padding: 20px;
-background-color: #FFFFFF;
+  width: 940px;
+  margin: 0 auto;
 }
 
 ul{
